--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Authentication Modal (Login / Sign Up) -->
-  <div id="authModal" class="modal">
+  <div id="authModal" class="modal hidden">
     <div class="modal-content">
       <div class="tabs">
         <button id="loginTab" class="active">Login</button>
@@ -86,9 +86,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-  <script src="script.js"></script>
-</body>
-</html>
-
