--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Authentication Modal (Login / Sign Up) -->
-  <div id="authModal" class="modal hidden">
+  <div id="authModal" class="modal">
     <div class="modal-content">
       <div class="tabs">
         <button id="loginTab" class="active">Login</button>
