--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
   <!-- Top Bar with Theme Toggle, Chat Switch, Leaderboard, and Market -->
   <div id="topbar">
-    <button id="themeToggle">Toggle Theme</button>
-    <button id="switchChat">Switch Chat</button>
-    <button id="viewLeaderboard">Leaderboard</button>
-    <button id="openMarket">Market</button>
+    <button id="themeToggle">🌞 Toggle Theme</button>
+    <button id="switchChat">💬 Switch Chat</button>
+    <button id="viewLeaderboard">🏆 Leaderboard</button>
+    <button id="openMarket">🛒 Market</button>
   </div>
 
   <!-- Authentication Modal (Login / Sign Up) -->
   <div id="authModal" class="modal">
     <div class="modal-content">
       <div class="tabs">
-        <button id="loginTab" class="active">Login</button>
-        <button id="signupTab">Sign Up</button>
+        <button id="loginTab" class="active">🔑 Login</button>
+        <button id="signupTab">📝 Sign Up</button>
       </div>
       <div id="loginForm" class="form-section">
         <h2>Login</h2>
@@ -53,13 +53,13 @@
     </main>
     <!-- Quest Log -->
     <aside id="questLog">
-      <h2>Quest Log</h2>
+      <h2>Quest Log 📜</h2>
       <ul id="quests"></ul>
     </aside>
     <!-- Trade Chat Room (toggleable) -->
     <section id="tradeChat" class="hidden">
       <header>
-        <h2>Trade Chat Room</h2>
+        <h2>Trade Chat Room 💱</h2>
       </header>
       <div id="tradeMessages"></div>
       <div id="tradeInputArea">
@@ -70,7 +70,7 @@
     <!-- Marketplace Modal -->
     <div id="marketModal" class="modal hidden">
       <div class="modal-content">
-        <h2>Marketplace</h2>
+        <h2>Marketplace 🛒</h2>
         <div id="marketListings"></div>
         <button id="closeMarket">Close Market</button>
       </div>
