--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>FortunePlay</title>
+  <!-- Use a modern Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Top Bar with Theme Toggle, Chat Switch, Leaderboard, Market, and Theme Customization -->
+  <!-- Top Bar with Theme Toggle, Chat Switch, Leaderboard, and Market -->
   <div id="topbar">
     <button id="themeToggle">🌞 Toggle Theme</button>
     <button id="switchChat">💬 Switch Chat</button>
@@ -81,7 +83,7 @@
         <button id="tradeSendButton">Send</button>
       </div>
     </section>
-    <!-- Marketplace Modal (includes Custom Items) -->
+    <!-- Marketplace Modal -->
     <div id="marketModal" class="modal hidden">
       <div class="modal-content">
         <h2>Marketplace 🛒</h2>
